<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundapp"
    tools:context="com.example.techanimal.androidclient.SettingsActivity">

    <Button
        android:id="@+id/buttonPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="392dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:onClick="clickApplyChanges"
        android:text="@string/textbla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPeriod"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextPeriod"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hintperiod"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/soundView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="441dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hintipport"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="21dp"
        android:onClick="cat"
        android:text="@string/cat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPuppy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundView" />

    <Button
        android:id="@+id/buttonPuppy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="21dp"
        android:onClick="puppy"
        android:text="@string/puppy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCow"
        app:layout_constraintStart_toEndOf="@+id/buttonCat"
        app:layout_constraintTop_toBottomOf="@+id/soundView" />

    <Button
        android:id="@+id/buttonCow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="21dp"
        android:onClick="cow"
        android:text="@string/cow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPuppy"
        app:layout_constraintTop_toBottomOf="@+id/soundView" />

    <TextView
        android:id="@+id/soundView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="230dp"
        android:text="@string/ChooseSound"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/volumeView"
        android:layout_width="215dp"
        android:layout_height="51dp"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="@string/Volume"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCat" />

    <SeekBar
        android:id="@+id/volumeBar"
        style="@android:style/Widget.Material.SeekBar.Discrete"
        android:layout_width="342dp"
        android:layout_height="29dp"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volumeView" />


</android.support.constraint.ConstraintLayout>
